--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,8 @@ python-dateutil>=2.8.2
 langchain-google-genai>=0.0.5
 langchain-core>=0.1.0
 google-generativeai>=0.3.0
+asyncpg>=0.27.0
+psycopg2-binary
 
 # Admin interface
 flask>=2.3.0
