--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ sqlalchemy>=2.0.0
 alembic>=1.12.0
 aiosqlite>=0.19.0  # For async SQLite
 psycopg2-binary>=2.9.9  # For PostgreSQL support when deploying
+asyncpg>=0.28.0
 
 # Web scraping
 beautifulsoup4>=4.12.0
