--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -18,4 +18,4 @@ jobs:
         run: python scripts/scraper.py
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          GOOGLE_GEMINI_API_KEY: ${{ secrets.GOOGLE_GEMINI_API_KEY }}
